<package>
  <name>robotarm101_gazebo</name>
  <version>1.0.0</version>
  <description>robotarm101_gazebo</description>
  <maintainer email="swcho84@gmail.com">Sungwook Cho</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>robotarm101_control</run_depend>
  <run_depend>robotarm101_description</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
