<?xml version="1.0"?>
<package format="2">
  <name>robotarm_description</name>
  <version>1.0.0</version>
  <description>The robotarm_description package</description>

  <maintainer email="swcho84@gmail.com">Sungwook Cho</maintainer>

  <license>GNU version 3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>

  <export>
  </export>
</package>
